@@ -1,5 +1,7 @@
+[CW7]
++ SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct, ScreenParams struct. Update DisplayCapabilities struct.
+
 [CW6]
-+ SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct.
 + SyncProxyAndroid SDK: changed video for Alice build
 + SyncProxyAndroid SDK: changed registration/unregistration procedure.
 + SyncProxyAndroid SDK: changed sync logic at transports
